# zotepad

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  eslint.config.mjs  jsrepo.json  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
.husky/: pre-commit
.vercel/: project.json
app/: app.config.ts  app.vue  error.vue
app/assets/css/: tailwind.css
app/components/app/: ActionStatusIndicator.vue  BottomActions.vue  CanvasEditor.vue  DynamicIsland.vue  GlobalActivityIndicator.vue  MissingEnvDrawer.vue  MobileTabBar.vue  NavBar.vue  PageHeader.vue  StorageProviderSelector.vue
app/components/ui/: sonner.vue
app/components/workflow/: SchemaEditor.vue  SchemaList.vue
app/composables/: useAPIService.ts  useAchievementSystem.ts  useActivityStatus.ts  useCOSService.ts  useCurrentUser.ts  useDynamicIsland.ts  useEnvironment.ts  useImageCompressor.ts  useKeyboardInset.ts  useLeaferCanvas.ts  useLog.ts  useMascotController.ts  useNavBar.ts  usePointsRewards.ts  usePointsSystem.ts  useSidebar.ts  useStatsCollector.ts  useStorageSelector.ts  useStorageService.ts  useTauriHTTP.ts  useTauriNotification.ts  useTauriSQL.ts  useTauriServices.ts  useTauriStore.ts  useToast.ts  useVariableValidator.ts  useWorkflowRunner.ts
app/composables/repositories/: useAchievementRepository.ts  useAssetRepository.ts  useEnvironmentRepository.ts  useNoteRepository.ts  (+5 more)
app/config/: routes.ts  sync-tables.ts
app/layouts/: default.vue
app/lib/: clientCrypto.ts  tauri-plugins.ts
app/middleware/: environment.global.ts
app/pages/: achievements.vue  canvas-editor.vue  debug-uuid.vue  index.vue  settings.vue  tauri-demo.vue
app/plugins/: init-services.client.ts
app/types/: models.ts  workflow.ts
app/utils/: async.ts  uuid.ts  wechat-formatter.ts
docs/: achievement-phase1-implementation.md  achievement-system-design.md  achievement-test-queries.sql  mascot-lottie-download-guide.md  sidebar-mascot-design.md  sqlite-migration-fix.md
scripts/: fix-version.sql  migrate-database.ps1  migrate-v3-to-v4.ps1  quick-release.mjs  quick-release.sh  update-version.js
src-tauri/: Cargo.toml  debug.keystore  release.keystore  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  sync_engine.rs
(+27 files in other folders)
