[package]
name = "zotepad"
version = "0.8.1"
description = "zotepad - A template for fast development of desktop applications using Tauri and Nuxt.js"
authors = [ "aatrox" ]
license = "MIT"
repository = "https://github.com/zzstudio/zotepad"
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2"
