[package]
name = "zotepad"
version = "0.24.5"
description = "zotepad - A template for fast development of desktop applications using Tauri and Nuxt.js"
authors = [ "aatrox" ]
license = "MIT"
repository = "https://github.com/zzstudio/zotepad"
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2"

# HTTP Server (仅桌面端)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
